--- a/index.html
+++ b/index.html
@@ -26,11 +26,6 @@
     button.copy-btn { padding:12px 18px; border:1.5px solid var(--border); border-radius:10px; background:#fff; cursor:pointer; font-size:1rem; font-weight:600; }
     button.copy-btn:hover { background:#f6f6f6; }
     .footer { color:var(--muted); font-size:1rem; text-align:center; margin:32px 0 40px; }
-    .us-instructions { font-size:1.08rem; margin-bottom:10px; }
-    .us-hotline { color:var(--brand-red); font-weight:700; }
-    .us-contact-list { margin-top:14px; }
-    .us-contact-list strong { color:var(--brand-red); }
-    .us-contact-list a { color:#337ab7; text-decoration:underline; }
   </style>
 </head>
 <body>
@@ -45,6 +40,7 @@
         Please notify your Honeywell Supervisor about your incident first.<br>
         Then, select your staffing company to view contact details for reporting.
       </div>
+
       <label for="category">Select Your Employer or Staffing Company</label>
       <select id="category" aria-label="Select reporting category">
         <option value="contingent">Contingent Labor Providers</option>
@@ -58,53 +54,49 @@
         <div class="hint">
           Contractors and Contingent Workers should immediately contact their company and follow their instructions.
         </div>
+
         <label for="provider">Select Your Staffing Company</label>
         <select id="provider" aria-label="Select staffing company"></select>
+
         <div class="contacts" id="provider-contact">
-          Select a company to view HSE contact details.
+          Select a company to view contact details.
         </div>
+
         <div class="copy">
           <button class="copy-btn" id="copy-btn" disabled>Copy contact details</button>
         </div>
       </div>
 
-      <!-- US -->
+      <!-- US (updated, concise, focus: Care On Site) -->
       <div id="us-panel" class="panel" hidden>
         <div class="section-title">Honeywell Employees – US <span class="badge">Care On Site 24/7 Hotline</span></div>
-        <div class="us-instructions">
-          <ol>
-            <li>
-              <strong>Report all Incidents &amp; Injuries</strong> to the Honeywell <span class="us-hotline">Hotline (844) 501-2273</span> &amp; your Supervisor.<br>
-              Supervisors will in turn notify the assigned Project/HSE Leader.
-            </li>
-            <li>
-              <strong>Vehicle Accidents</strong> involving Company Vehicles (regardless of injury) are reported to the Honeywell Hotline &amp; require a call to the Element Fleet Management Center along with any reports required by local Law Enforcement Agencies.
-            </li>
-          </ol>
-        </div>
-        <div class="contacts us-contact-list">
-          <strong>Care On Site Hotline:</strong> (844) 501-2273<br>
-          <strong>SR Projects HSE – Jonathan Walker:</strong> (337) 465-9281<br>
-          <strong>SR Projects HSE – Mark Williams:</strong> (318) 732-2809<br>
-          <strong>SR HSE Lead – Muhammad Chaudhry:</strong> (346) 640-2723<br>
-          <strong>Fleet Management Call Center:</strong> (800) 641-0062
+        <div class="contacts">
+          <strong>Report any work‑related Injury immediately</strong> to your supervisor &amp; Honeywell Hotline
+          <strong>(Care On Site, (844) 501‑2273)</strong>.<br><br>
+          <strong>Vehicle Accidents</strong> involving Company Vehicles (regardless of injury) are reported to the Honeywell Hotline
+          <strong>(Care On Site, (844) 501‑2273)</strong> &amp; require a call to the
+          <strong>Element Fleet Management Center (800) 641‑0062)</strong> along with any reports required by local Law Enforcement Agencies.
         </div>
       </div>
 
-      <!-- Canada -->
+      <!-- Canada (updated, concise, focus: Windley Ely) -->
       <div id="ca-panel" class="panel" hidden>
         <div class="section-title">Honeywell Employees – Canada <span class="badge">Windley Ely Nurse Triage</span></div>
         <div class="contacts">
-          <strong>Phone:</strong> 877-424-5256<br>
-          <strong>Important:</strong> Please report all work related injuries immediately to your supervisor.<br>
-          <strong>HSE Contact:</strong> (502) 974-0422, (346) 640-2723
+          <strong>Report any work‑related Injury immediately</strong> to your supervisor &amp; Honeywell Hotline
+          <strong>(Windley Ely Nurse Triage, (877) 424‑5256)</strong>.<br><br>
+          <strong>Vehicle Accidents</strong> involving Company Vehicles (regardless of injury) are reported to the Honeywell Hotline
+          <strong>(Windley Ely Nurse Triage, (877) 424‑5256)</strong> &amp; require a call to the
+          <strong>Element Fleet Management Center (800) 411‑8500)</strong> along with any reports required by local Law Enforcement Agencies.
         </div>
       </div>
     </div>
+
     <div class="footer">This page works offline after the first load. No QR images used.</div>
   </main>
+
   <script>
-    // Full provider list embedded below (parsed from your Excel).
+    // Full provider list embedded below (from your Excel). HSE contacts removed per request.
     const contingentProviders = [
       {"name":"Acro","contact":"David McKinney, HR Generalist; dmckinney@acrocorp.com; (734) 629-5283"},
       {"name":"Akkodis","contact":"AkkodisAssociateSupport@akkodisgroup.com; 844-875-5746; Escalations: Nilsa.Edwards@akkodisgroup.com; Susan.Anderson@akkoidgroup.com"},
@@ -168,7 +160,7 @@
           contactBox.textContent = p.contact || 'No contact details available.';
           copyBtn.disabled = false;
         } else {
-          contactBox.textContent = 'Select a company to view HSE contact details.';
+          contactBox.textContent = 'Select a company to view contact details.';
           copyBtn.disabled = true;
         }
       });
@@ -177,5 +169,7 @@
         try { await navigator.clipboard.writeText(contactBox.textContent); copyBtn.textContent = 'Copied!'; setTimeout(() => (copyBtn.textContent = 'Copy contact details'), 1500); } catch (e) {}
       });
     })();
-   </script>
+  </script>
 </body>
+</html>
+``
